# Pongy

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  ROADMAP.md  main.c
SDL3/i686-w64-mingw32/lib/pkgconfig/: sdl3-ttf.pc
cmake_modules/: FindSDL3.cmake
src/: config.h  main.c  types.h
src/core/: ball.c  ball.h  game.c  game.h  paddle.c  paddle.h
src/ui/: menu.c  menu.h
src/utils/: render.c  render.h
